--- a/packages/@aws-cdk/core/package.json
+++ b/packages/@aws-cdk/core/package.json
@@ -141,7 +141,10 @@
     "cfn2ts-core-import": ".",
     "pre": [
       "rm -rf test/fs/fixtures && cd test/fs && tar -xzf fixtures.tar.gz"
-    ]
+    ],
+    "env": {
+      "AWSLINT_BASE_CONSTRUCT": "true"
+    }
   },
   "nyc": {
     "statements": 55,
